fixed the main container problem button overflowing

--- a/responsive.css
+++ b/responsive.css
@@ -115,10 +115,7 @@
     }
 
     .main-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: auto;
     }
 
     .login-form {
